[package]
name = "JavaLauncher"
version = "2.0.0"
authors = ["Kevin Eastridge"]
edition = "2024"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# See https://github.com/jni-rs/jni-rs/pull/293 linking to path only is silly
#todo update this to mainline?
jni = { git = "https://github.com/AstroImageJ/jni-rs", branch = "dyn-load-jvm", features = ["invocation", "invocation-dyn"] }
walkdir = "2.5.0"#todo replace w/ https://rust-lang-nursery.github.io/rust-cookbook/file/dir.html ?
dirs = "6.0.0"
sysinfo = "0.36.1"
zip = "4.3.0"
libloading = "0.8.8"
dunce = "1.0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = {version = "0.60.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"]}

# From https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # instructs the linker to optimize at the link stage. This can, for example, remove dead code and often times reduces binary size.
codegen-units = 1 # Slower, but more optimization?
panic = "abort" # No helpful stacktrace on panic