[package]
name = "JavaLauncher"
version = "2.0.0"
authors = ["Kevin Eastridge"]
edition = "2024"
license = "LGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-manifest = "1.4.0"

[dependencies]
jni = { version = "0.21.1", features = ["invocation"] }
walkdir = "2.5.0"
dirs = "6.0.0"
zip = "5.0.0"
dunce = "1.0.5"
memmap2 = "0.9.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = {version = "0.60.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"]}

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"

# From https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # instructs the linker to optimize at the link stage. This can, for example, remove dead code and often times reduces binary size.
codegen-units = 1 # Slower, but more optimization?
panic = "abort" # No helpful stacktrace on panic